# Worksheet2

./: .gitignore  Makefile  Readme.md  benchmark.cpp  benchmark.hpp  benchmark.py  conv.c  conv.cpp  conv_baseline  conv_optimized  conv_optimized.c  npy.hpp  pyproject.toml
