[project]
name = "worksheet2"
version = "0.1.0"
description = ""
authors = [
    {name = "Willow Ahrens",email = "willow@csail.mit.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
